<resources>
    <string name="version_1_0" translatable="false">Version 1.0</string>
    <string name="src_lang" translatable="false">English</string>
    <string name="tar_lang" translatable="false">French</string>
    <string name="email_address" translatable="false">appswingstudio@gmail.com</string>
    <string name="ad_attribution" translatable="false">AD</string>
    <string name="fb_test_id" translatable="false">407a69e3-d20c-4d76-b3bd-bb19c04bea1b</string>
    <string name="source_lang" translatable="false">English</string>
    <string name="target_lang" translatable="false">French</string>
    <string name="african_code" translatable="false">af</string>
    <string name="arabic_code" translatable="false">ar</string>
    <string name="bangali_code" translatable="false">bn</string>
    <string name="brazil_code" translatable="false">pt</string>
    <string name="chinese_code" translatable="false">zh</string>
    <string name="czech_code" translatable="false">cs</string>
    <string name="us_code" translatable="false">en</string>
    <string name="danish_code" translatable="false">da</string>
    <string name="dutch_code" translatable="false">nl</string>
    <string name="flipino_code" translatable="false">fil</string>
    <string name="french_code" translatable="false">fr</string>
    <string name="german_code" translatable="false">de</string>
    <string name="hindi_code" translatable="false">hi</string>
    <string name="indonasia_code" translatable="false">id</string>
    <string name="italian_code" translatable="false">it</string>
    <string name="japnese_code" translatable="false">ja</string>
    <string name="korean_code" translatable="false">ko</string>
    <string name="malysia_code" translatable="false">ms</string>
    <string name="african_name" translatable="false">Afrikaans</string>
    <string name="arabic_name" translatable="false">Arabic</string>
    <string name="bangali_name" translatable="false">Bengali</string>
    <string name="brazil_name" translatable="false">Brazil</string>
    <string name="chinese_name" translatable="false">Chinese</string>
    <string name="czech_name" translatable="false">Czech</string>
    <string name="united_states_name" translatable="false">English</string>
    <string name="danish_name" translatable="false">Danish</string>
    <string name="dutch_name" translatable="false">Dutch</string>
    <string name="flipino_name" translatable="false">Filipino</string>
    <string name="french_name" translatable="false">French</string>
    <string name="german_name" translatable="false">German</string>
    <string name="hindi_name" translatable="false">Hindi</string>
    <string name="indonasia_name" translatable="false">Indonesia</string>
    <string name="italian_name" translatable="false">Italian</string>
    <string name="japnese_name" translatable="false">Japanese</string>
    <string name="korean_name" translatable="false">Korean</string>
    <string name="malysia_name" translatable="false">Malay</string>
    <string name="app_name">Translate</string>
    <string name="nav_title">Translator and Dictionary</string>
    <string name="nav_sub_title">Translate between more than\n100 languages </string>
    <string name="hint_input_word">Enter text to translate</string>
    <string name="translate">Translate</string>
    <string name="no">NO</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="connection_failed">Internet connection failed</string>
    <string name="click_to_refresh">Click to refresh</string>
    <string name="definition">Definition</string>
    <string name="sample_sentences">Sample Sentences</string>
    <string name="web_definition">Web definition</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="synonyms">Synonyms</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="cover_hint">Sliding up to open</string>
    <string name="enable_copy_to_translate">Copy to Translate</string>
    <string name="lock_screen_word">Word lock screen</string>
    <string name="ofline_download">Offline Download</string>
    <string name="update_dialog_packages_to_update">The following packages will be updated:</string>
    <string name="update_dialog_title">Update now?</string>
    <string name="update_dialog_update_button">Update</string>
    <string name="no_update_dialog_message">Everything is up to date!</string>
    <string name="update_progress_dialog_title">Updating</string>
    <string name="error_dialog_title">Error</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="offline_on_install_error_title">Installation failed</string>
    <string name="offline_on_install_error_message">Internet access is required to install language pairs.</string>
    <string name="offline_on_translate_error_title">Translation failed</string>
    <string name="offline_on_translate_error_message">Install language pairs to translate without Internet access.</string>
    <string name="offline_dictionary">Offline Dictionary <font color='#3781D6'><b>(coming soon)</b></font></string>
    <string name="my_words">My Words</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_friends">Share with Friends</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_and_condition">Terms of Services</string>
    <string name="my_favorites">My Favorites</string>
    <string name="available_for_download">Available for download</string>
    <string name="already_downloaded">Already downloaded</string>
    <string name="no_result_found">No result found</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="display_floating_widget">Copy and get the translation instantly.</string>
    <string name="display_sticky">Display the search box in the notification bar.</string>
    <string name="notification">Notification</string>
    <string name="receive_notification_about_english_content">Receive notification</string>
    <string name="show_words_on_lock_screen">Show words and meaning on lock screen.</string>
    <string name="general_settings">General Settings</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_all_search_history">Clear all the search history below the search box.</string>
    <string name="about">About</string>
    <string name="no_dictionary_found">No dictionary found</string>
    <string name="share_using">App Link</string>
    <string name="offline_error">Internet connection failed.Download offline package to get translations even when you are offline</string>
    <string name="offline_not_supported">Selected language pair does not support offline translation</string>
    <string name="words_phrase_or_sentences">Words, phrase or sentences</string>
    <string name="favorite_words">No bookmarked word selected</string>
    <string name="block_ads_detail">Translator &amp; Dictionary is supported by Ads but now you can remove Ads by upgrading to Pro.</string>
    <string name="rate_us_header">Do you like Translator &amp; Dictionary?</string>
    <string name="hint_word"><font size="20">Words, phrase or sentences!</font></string>
    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_suggestions">Suggest us what went wrong and we\'ll work on it!</string>
    <string name="text_name_notification">Notification Name</string>
    <string name="quick_translate">Quick Translate</string>
    <string name="enter_any_word">Enter any word</string>
    <string name="data_not_found">Could not found any data. Please check Internet Connection or contact administrator</string>
    <string name="str_error_code_403">API key not valid. Please pass a valid API key</string>
    <string name="str_error_code_400">Invalid value</string>
    <string name="str_error_bad_pair">Bad language pair</string>
    <string name="check_internet">Check internet connection</string>
    <string name="result_not_found">Result not found</string>
    <string name="stt_error">Error, please check the network and try again</string>
    <string name="stt_error_audio">Audio recording error, please check the network and try again</string>
    <string name="stt_error_client">Client side error, please check the network and try again</string>
    <string name="stt_error_insufficient_permissions">Insufficient permissions, please check permissions and try again</string>
    <string name="stt_error_network_error">Network error, please check the network and try again</string>
    <string name="stt_error_network_timeout">Network operation timed out, please check the network and try again</string>
    <string name="stt_error_no_match">No recognition result matched, please try again</string>
    <string name="stt_error_recognizer_busy">RecognitionService busy, please try again</string>
    <string name="stt_error_server">Server sends error status, please check the network and try again</string>
    <string name="stt_error_speech_timeout">No speech input, please try again</string>
    <string name="stt_language_unavailable">This language does not support speech recognition. Please input text.</string>
    <string name="stt_processing">Processing…</string>
    <string name="stt_recording">Recording…</string>
    <string name="stt_recording_and_processing">Recording and processing…</string>
    <string name="stt_success">Success!!</string>
    <string name="stt_error_no_word">No word recorded. Please Speak in clear mode</string>
    <string name="stt_permission_allow">You need to grant access to require for Speech to Text</string>
    <string name="mic_permission_deny">Microphone permission denied to use speech to text.</string>
    <string name="exit_header">Exit</string>
    <string name="confirm_exit">Confirm Exit???</string>
    <string name="do_you_want_to_exit_from_app">Do you want to exit from app?</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="text_translation">Text Translation</string>
    <string name="text_detail">Conquer communication gaps! Translate between any languages with ease, for texts of all lengths.</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="allow_notifications_for_accurate_and_real_time_updates_stay_informed_effortlessly">Allow notifications for accurate and real-time updates. Stay informed effortlessly.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="select_document">Select Document</string>
    <string name="translate_files">Translate Files</string>
    <string name="upload_file_doc_docx_pdf_ppt">Upload file doc, txt, pdf, ppt</string>
    <string name="browse">Browse</string>
    <string name="enter_page_number_to_translate">Enter page number to translate</string>
    <string name="go_to_page">Go to page</string>
    <string name="no_internet_connected">No internet connected</string>
    <string name="check_your_internet_connection_and_try_again">Check your internet connection and try again</string>
    <string name="turn_on_mobile_data">Turn on Mobile Data</string>
    <string name="turn_on_wi_fi">Turn on Wi-Fi</string>
</resources>