<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dlg_exit_bg"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/go_to_page"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pageNumberET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:hint="@string/enter_page_number_to_translate"
            android:digits="0123456789"
            android:inputType="numberSigned"
            android:textColor="@color/black"
            android:textColorHint="#BABABA"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTV" />

        <TextView
            android:id="@+id/cancelTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_page_cancel_btn"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/cancel"
            android:textColor="@color/dictionary_blue_text_color"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@id/doneTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pageNumberET" />

        <TextView
            android:id="@+id/doneTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/bg_page_done_btn"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelTV"
            app:layout_constraintTop_toBottomOf="@id/pageNumberET" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>