<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_10dp"
    android:layout_marginBottom="@dimen/dimen_10dp"
    android:background="@drawable/bg_clear_history"
    android:paddingHorizontal="14dp"
    android:paddingVertical="28dp">

    <ImageView
        android:id="@+id/permissionIV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_permission_notification"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.38" />

    <TextView
        android:id="@+id/permissionTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/notification_permission"
        android:textColor="@color/black"
        android:textSize="20.7sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/permissionIV" />

    <TextView
        android:id="@+id/permissionDetailTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/allow_notifications_for_accurate_and_real_time_updates_stay_informed_effortlessly"
        android:textColor="#858aa6"
        android:textSize="15.7sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/permissionTitleTV" />

    <TextView
        android:id="@+id/settingsTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_settings"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:background="@drawable/bg_settings_button"
        android:paddingVertical="13dp"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@id/permissionDetailTV"/>

</androidx.constraintlayout.widget.ConstraintLayout>