<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.onboarding.OnboardingActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/onboarding_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/adsCV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skipTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/skip"
        android:textColor="@color/skip_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:dotsColor="#734286F5"
        app:dotsCornerRadius="8dp"
        app:dotsSize="8dp"
        app:dotsSpacing="4dp"
        app:dotsWidthFactor="2.5"
        app:layout_constraintBottom_toBottomOf="@id/nextTV"
        app:layout_constraintStart_toStartOf="@id/titleTV"
        app:layout_constraintTop_toTopOf="@id/nextTV"
        app:progressMode="true"
        app:selectedDotColor="#4286f5" />

    <TextView
        android:id="@+id/nextTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_onboarding_next"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="23dp"
        android:paddingVertical="6dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/titleTV"
        app:layout_constraintEnd_toEndOf="@id/onboarding_view_pager" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_translation"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/detailTV"
        app:layout_constraintStart_toStartOf="@id/onboarding_view_pager" />

    <TextView
        android:id="@+id/detailTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.7"
        android:fontFamily="sans-serif"
        android:text="@string/text_detail"
        android:textColor="@color/black"
        android:textSize="14.7sp"
        app:layout_constraintBottom_toBottomOf="@id/onboarding_view_pager"
        app:layout_constraintEnd_toEndOf="@id/onboarding_view_pager"
        app:layout_constraintStart_toStartOf="@id/onboarding_view_pager" />

    <androidx.cardview.widget.CardView
        android:id="@+id/adsCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@color/top_bar_color"
        android:elevation="0dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/nativeAdContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>