<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="6dp"
    android:background="@drawable/bg_no_internet_dlg"
    android:paddingHorizontal="16dp"
    android:paddingBottom="24dp"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/closeIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="4dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/artIV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_no_data"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/closeIV"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/no_internet_connected"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/artIV" />

    <TextView
        android:id="@+id/detailTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/check_your_internet_connection_and_try_again"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/titleTV" />

    <LinearLayout
        android:id="@+id/mobileDataLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_mobile_data_btn"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toStartOf="@id/wifiLL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailTV">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_mobile_data" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/turn_on_mobile_data"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wifiLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_wifi_btn"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mobileDataLL"
        app:layout_constraintTop_toBottomOf="@id/detailTV">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_wifi" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/turn_on_wi_fi"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>