<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dlg_exit_bg">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            app:layout_goneMarginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/confirm_exit"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/adsCV" />

        <TextView
            android:id="@+id/detailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/titleTV"
            android:text="@string/do_you_want_to_exit_from_app"
            android:textSize="16sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/cancelTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:background="@drawable/bg_cancel_btn"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailTV"
            app:layout_constraintStart_toEndOf="@id/exitTV"/>

        <TextView
            android:id="@+id/exitTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/exit_header"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/bg_exit_btn"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailTV"
            app:layout_constraintEnd_toStartOf="@id/cancelTV"/>

        <View
            android:id="@+id/emptyView2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintTop_toBottomOf="@id/exitTV"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/adsCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            android:layout_margin="12dp"
            android:background="@color/top_bar_color"
            app:layout_constraintTop_toTopOf="parent">
            <FrameLayout
                android:id="@+id/nativeAdContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/native_ad_bg_color"
                />
        </androidx.cardview.widget.CardView>

        <!--<View
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@id/adsCV"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>